--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4df0ef0b",
+   "id": "7a21e789",
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "187138fc",
+   "id": "ff943466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,7 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1362df80",
+   "id": "9fc00621",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "fbe749fa",
+   "id": "dbd40565",
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e5b03709",
+   "id": "d330d552",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "db35fecc",
+   "id": "1e9965e1",
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2667,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "67ea73cb",
+   "id": "29702104",
    "metadata": {},
    "outputs": [
     {
@@ -2706,7 +2706,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ad0b7f21",
+   "id": "86525f16",
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "6c04d8eb",
+   "id": "01887d9a",
    "metadata": {},
    "outputs": [
     {
@@ -2783,7 +2783,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4c896654",
+   "id": "66aa5495",
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5bb27a1e",
+   "id": "b7f0774c",
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "270018d0",
+   "id": "72b29eb9",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "38eea946",
+   "id": "adc84bc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3102,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "67d04c4a",
+   "id": "f0197ff0",
    "metadata": {},
    "outputs": [
     {
@@ -3139,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d3dc1924",
+   "id": "54deb77d",
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8476c647",
+   "id": "e262d46f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3188,7 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7221fd5d",
+   "id": "b7106e02",
    "metadata": {},
    "outputs": [
     {
@@ -3427,7 +3427,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e64b7477",
+   "id": "8148130a",
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3986fca7",
+   "id": "89cc0c93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3678,7 +3678,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "af4ef145",
+   "id": "0a1098ba",
    "metadata": {},
    "outputs": [
     {
@@ -3715,7 +3715,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d0c1b1bd",
+   "id": "20711ec2",
    "metadata": {},
    "outputs": [
     {
@@ -3752,7 +3752,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d89d2d36",
+   "id": "43ce44b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3764,7 +3764,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "fedebebb",
+   "id": "761212d1",
    "metadata": {},
    "outputs": [
     {
@@ -3800,7 +3800,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b0a999fb",
+   "id": "555c1fd4",
    "metadata": {},
    "outputs": [
     {
@@ -3836,7 +3836,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "245df625",
+   "id": "d9bb673e",
    "metadata": {},
    "outputs": [
     {
@@ -3978,7 +3978,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "0aa8cd4d",
+   "id": "f0311b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3989,7 +3989,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "206010d2",
+   "id": "4fa5ca84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4000,7 +4000,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9606e8f9",
+   "id": "1be6da29",
    "metadata": {},
    "outputs": [
     {
@@ -4036,7 +4036,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2be2e402",
+   "id": "e91347ae",
    "metadata": {},
    "outputs": [
     {
@@ -4189,7 +4189,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ff62ee36",
+   "id": "1f388489",
    "metadata": {},
    "outputs": [
     {
@@ -4495,8 +4495,296 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "e8bc6989",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top 5 schools\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "3bef89ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show bottom 5 schools\n",
+    "bottom_schools = per_school_summary_df.sort_values(['% Overall Passing'], ascending=True)\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f380bfc0",
+   "id": "8f679966",
    "metadata": {},
    "outputs": [],
    "source": []
