scores by school type 4.13.3

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "6dc7737d",
+   "id": "a87fd0db",
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "53915a5b",
+   "id": "4e7622a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,7 +2389,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0f59d24b",
+   "id": "50fd52ac",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5c376b64",
+   "id": "563351d0",
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "09baae16",
+   "id": "25dc4d3e",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "27975f61",
+   "id": "a1b112e8",
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2667,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3d16dd59",
+   "id": "a36e800b",
    "metadata": {},
    "outputs": [
     {
@@ -2706,7 +2706,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "4b280b05",
+   "id": "fa3a02d8",
    "metadata": {},
    "outputs": [
     {
@@ -2744,7 +2744,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bff04bd5",
+   "id": "beb0f4e4",
    "metadata": {},
    "outputs": [
     {
@@ -2783,7 +2783,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3a6f3d4e",
+   "id": "65383067",
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "7edbf909",
+   "id": "5dc9d220",
    "metadata": {},
    "outputs": [
     {
@@ -2856,7 +2856,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5eb2957a",
+   "id": "0b9f21d7",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "87e20aa7",
+   "id": "4aae0913",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3102,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8902a97a",
+   "id": "6004c564",
    "metadata": {},
    "outputs": [
     {
@@ -3139,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9e2db35a",
+   "id": "93b06414",
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7a0a1261",
+   "id": "15e0e411",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3188,7 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1b746d7e",
+   "id": "77a0c30b",
    "metadata": {},
    "outputs": [
     {
@@ -3427,7 +3427,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "99569d36",
+   "id": "aa6c1162",
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3053695d",
+   "id": "04a322cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3678,7 +3678,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c7e090a5",
+   "id": "f4b049b8",
    "metadata": {},
    "outputs": [
     {
@@ -3715,7 +3715,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4f3bc43b",
+   "id": "fc2068a8",
    "metadata": {},
    "outputs": [
     {
@@ -3752,7 +3752,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "39c4d992",
+   "id": "9a53ae62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3764,7 +3764,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "9ad4a588",
+   "id": "6399a3e0",
    "metadata": {},
    "outputs": [
     {
@@ -3800,7 +3800,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "1e643d42",
+   "id": "e7fde19a",
    "metadata": {},
    "outputs": [
     {
@@ -3836,7 +3836,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "00f4b2ba",
+   "id": "c9152248",
    "metadata": {},
    "outputs": [
     {
@@ -3978,7 +3978,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "08655904",
+   "id": "53bcfcaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3989,7 +3989,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "c790b33b",
+   "id": "c291bac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4000,7 +4000,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "69f96056",
+   "id": "6d89f9fb",
    "metadata": {},
    "outputs": [
     {
@@ -4036,7 +4036,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "40baba28",
+   "id": "b4c94bdc",
    "metadata": {},
    "outputs": [
     {
@@ -4189,7 +4189,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0de77beb",
+   "id": "091b6ef2",
    "metadata": {},
    "outputs": [
     {
@@ -4496,7 +4496,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "5afd46e5",
+   "id": "ddcaa7f7",
    "metadata": {},
    "outputs": [
     {
@@ -4640,7 +4640,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "a8608500",
+   "id": "b8fb8b3c",
    "metadata": {},
    "outputs": [
     {
@@ -4784,7 +4784,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "9dac5d7e",
+   "id": "6ee39d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4798,7 +4798,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "fc602372",
+   "id": "857fd521",
    "metadata": {},
    "outputs": [
     {
@@ -4938,7 +4938,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "be0567ee",
+   "id": "ce0e470d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4952,7 +4952,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "e2199f66",
+   "id": "75ff1bda",
    "metadata": {},
    "outputs": [
     {
@@ -4989,7 +4989,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "c5b93353",
+   "id": "37d85d3f",
    "metadata": {},
    "outputs": [
     {
@@ -5026,7 +5026,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c52c4fd3",
+   "id": "fab584b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5040,7 +5040,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7d2fbcb8",
+   "id": "c7365ca5",
    "metadata": {},
    "outputs": [
     {
@@ -5077,7 +5077,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b195ebd1",
+   "id": "c2fb3eba",
    "metadata": {},
    "outputs": [
     {
@@ -5114,7 +5114,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "cc63e176",
+   "id": "d873f62c",
    "metadata": {},
    "outputs": [
     {
@@ -5220,7 +5220,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "13846c95",
+   "id": "d8728bf4",
    "metadata": {},
    "outputs": [
     {
@@ -5326,7 +5326,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "20c03410",
+   "id": "82f39bd4",
    "metadata": {},
    "outputs": [
     {
@@ -5429,7 +5429,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "45da4ce3",
+   "id": "e9ad87e2",
    "metadata": {},
    "outputs": [
     {
@@ -5532,7 +5532,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "ad5f0f5d",
+   "id": "eefdf275",
    "metadata": {},
    "outputs": [
     {
@@ -5562,7 +5562,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "a87b642e",
+   "id": "51dcd99f",
    "metadata": {},
    "outputs": [
     {
@@ -5589,7 +5589,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "59c16306",
+   "id": "8be50c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5601,7 +5601,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "1f3013e4",
+   "id": "6ad165a1",
    "metadata": {},
    "outputs": [
     {
@@ -5971,7 +5971,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "12e61d8f",
+   "id": "91c6f673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5986,7 +5986,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "44926eb2",
+   "id": "021ce20f",
    "metadata": {},
    "outputs": [
     {
@@ -6012,7 +6012,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "526ce3fe",
+   "id": "701d312e",
    "metadata": {},
    "outputs": [
     {
@@ -6131,7 +6131,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "b0d4ad0c",
+   "id": "66252d0d",
    "metadata": {},
    "outputs": [
     {
@@ -6249,7 +6249,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "a04484e8",
+   "id": "2cb67906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6261,7 +6261,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "d15034af",
+   "id": "73c90d3b",
    "metadata": {},
    "outputs": [
     {
@@ -6647,7 +6647,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "e6ee3c42",
+   "id": "b4e30b53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6662,7 +6662,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "c1857eb7",
+   "id": "33656444",
    "metadata": {},
    "outputs": [
     {
@@ -6764,7 +6764,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "69523420",
+   "id": "334e61e2",
    "metadata": {},
    "outputs": [
     {
@@ -6864,8 +6864,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "id": "7544c97a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for desired columns\n",
+    "type_math_scores = per_school_summary_df.groupby(['School Type']).mean()['Average Math Score']\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a295ea88",
+   "id": "a3f7417a",
    "metadata": {},
    "outputs": [],
    "source": []
